apps/base/kubescape/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubescape
  namespace: kubescape
  labels:
    app.kubernetes.io/name: kubescape
    app.kubernetes.io/part-of: security
spec:
  selector:
    app.kubernetes.io/name: kubescape-web
  ports:
  - name: web
    port: 80
    targetPort: web
    protocol: TCP
  type: ClusterIP
