apps/base/kubescape/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubescape
  namespace: kubescape
  labels:
    app.kubernetes.io/name: kubescape
    app.kubernetes.io/part-of: security
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kubescape.landryzetam.net
    secretName: kubescape-tls
  rules:
  - host: kubescape.landryzetam.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubescape
            port:
              number: 80
